//
// This Protobuf definition was generated by Visual ReCode 2.0.3.1140
//
syntax = "proto3";

option csharp_namespace = "Viking.gRPC.AnnotationTypes.V1.Protos";

package Viking.gRPC.AnnotationTypes.V1;

import "Protos/AnnotationTypes.proto";
import "google/protobuf/timestamp.proto";

service AnnotateLocations {
  rpc CreateLocation (CreateLocationRequest) returns (CreateLocationResponse);
  rpc GetLocationByID (GetLocationByIDRequest) returns (GetLocationByIDResponse);
  rpc GetLocationsByID (GetLocationsByIDRequest) returns (GetLocationsByIDResponse);
  rpc GetLastModifiedLocation (GetLastModifiedLocationRequest) returns (GetLastModifiedLocationResponse);
  rpc GetLinkedLocations (GetLinkedLocationsRequest) returns (GetLinkedLocationsResponse);
  rpc GetLocationsForSection (GetLocationsForSectionRequest) returns (GetLocationsForSectionResponse);
  rpc GetLocationsForStructure (GetLocationsForStructureRequest) returns (GetLocationsForStructureResponse);
  rpc GetLocationChangesInMosaicRegion (GetLocationChangesInMosaicRegionRequest) returns (GetLocationChangesInMosaicRegionResponse);
  rpc GetAnnotationsInMosaicRegion (GetAnnotationsInMosaicRegionRequest) returns (GetAnnotationsInMosaicRegionResponse);
  rpc GetLocationChanges (GetLocationChangesRequest) returns (GetLocationChangesResponse);
  rpc Update (UpdateLocationRequest) returns (UpdateLocationResponse);
  rpc CreateLocationLink (CreateLocationLinkRequest) returns (CreateLocationLinkResponse);
  rpc DeleteLocationLink (DeleteLocationLinkRequest) returns (DeleteLocationLinkResponse);
  rpc GetLocationLinksForSection (GetLocationLinksForSectionRequest) returns (GetLocationLinksForSectionResponse);
  rpc GetLocationLinksForSectionInMosaicRegion (GetLocationLinksForSectionInMosaicRegionRequest) returns (GetLocationLinksForSectionInMosaicRegionResponse);
  rpc GetLocationChangeLog (GetLocationChangeLogRequest) returns (GetLocationChangeLogResponse);
}

message CreateLocationRequest {

  Location obj = 1;
  repeated int64 linked_ids = 2;
}


message GetLocationByIDRequest {

  int64 id = 1;
}


message GetLocationsByIDRequest {

  repeated int64 ids = 1;
}


message GetLastModifiedLocationRequest { }

message GetLinkedLocationsRequest {

  int64 id = 1;
}


message GetLocationsForSectionRequest {

  int64 section = 1;
}


message GetLocationsForStructureRequest {

  int64 structure_id = 1;
}


message GetLocationChangesInMosaicRegionRequest {

  int64 section = 1;
  BoundingRectangle bbox = 2;
  double min_radius = 3;
  optional google.protobuf.Timestamp modified_after_this_utc_time = 4;
}


message GetAnnotationsInMosaicRegionRequest {

  int64 section = 1;
  BoundingRectangle bbox = 2;
  double min_radius = 3;
  optional google.protobuf.Timestamp modified_after_this_utc_time = 4;
}


message GetLocationChangesRequest {

  int64 section = 1;
  optional google.protobuf.Timestamp modified_after_this_utc_time = 2;   
}


message UpdateLocationRequest {

  repeated Location locations = 1;
}


message CreateLocationLinkRequest {

  int64 source_id = 1;
  int64 target_id = 2;
}


message DeleteLocationLinkRequest {

  int64 source_id = 1;
  int64 target_id = 2;
}


message GetLocationLinksForSectionRequest {

  int64 section = 1;
  int64 modified_after_this_time = 2;
  int64 query_executed_time = 3;
  repeated LocationLink deleted_links = 4;
}


message GetLocationLinksForSectionInMosaicRegionRequest {

  int64 section = 1;
  BoundingRectangle bbox = 2;
  double min_radius = 3;
  int64 modified_after_this_utc_time = 4;
  int64 query_executed_time = 5;
  repeated LocationLink deleted_links = 6;
}


message GetLocationChangeLogRequest {

  int64 structure_id = 1;
  optional google.protobuf.Timestamp begin_time = 2;
  optional google.protobuf.Timestamp end_time = 3;
}


message CreateLocationResponse {

  Location value = 1;
}


message GetLocationByIDResponse {

  Location value = 1;
}


message GetLocationsByIDResponse {

  repeated Location values = 1;
}


message GetLastModifiedLocationResponse {

  Location value = 1;
}


message GetLinkedLocationsResponse {

  repeated int64 values = 1;
}


message GetLocationsForSectionResponse {

  repeated Location values = 1; 
  google.protobuf.Timestamp query_executed_time = 2;
}


message GetLocationsForStructureResponse {

  repeated Location values = 1;
}


message GetLocationChangesInMosaicRegionResponse {

  repeated Location values = 1;
  repeated int64 deleted_ids = 2;
  google.protobuf.Timestamp query_executed_time = 3;
}


message GetAnnotationsInMosaicRegionResponse {

  AnnotationSet value = 1;
  repeated int64 deleted_ids = 2;
  google.protobuf.Timestamp query_executed_time = 3;
}


message GetLocationChangesResponse {

  repeated Location values = 1;
  repeated int64 deleted_ids = 2;
  google.protobuf.Timestamp query_executed_time = 3;
}


message UpdateLocationResponse {

  repeated int64 values = 1;
}
 
message CreateLocationLinkResponse { }

message DeleteLocationLinkResponse { }

message GetLocationLinksForSectionResponse {

  repeated LocationLink values = 1; 
  repeated LocationLink deleted = 2;
  google.protobuf.Timestamp query_executed_time = 3;
}
 
message GetLocationLinksForSectionInMosaicRegionResponse {

  repeated LocationLink values = 1;
}
 
message GetLocationChangeLogResponse {

  repeated LocationHistory values = 1;
}
  
message AnnotationSet {

  repeated Structure structures = 1;
  repeated Location locations = 2;
}
 
message LocationHistory {

  int64 changed_column_mask = 1;
}